tests/e2e/testdata/compiled-cases/input-validation/stacks/invalid/open-object-type.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      required-name: 'web'
      payload: { kind: 1, extra: 'kept' }
    }
  }
}
